# HackAI_StartupX

./: QRscan.py  README.md  imagetotext.py  index.html  nlptechnique.py  pyproject.toml  skills.py  style.css
backend/: server.py
src/: TF-IDF.py  app.py  main.py  model.py  resumepath.csv  style.css
src/NLPT/: try.py
src/agents/: resumecheck.py
src/messages/: my_email.py
src/skill/: skillgiver.py
