[tool.poetry]
name = "hackaifinal"
version = "0.1.0"
description = ""
authors = ["Ekansh <ekanshbhushan2k22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.4"
pdfminer = "^20191125"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
